Change use of List.of(E) to Collections.singleton()
result in higher performance in internal code